# break-out

./: .gitignore  BreakOutConfig.h.in  CMakeLists.txt  CMakePresets.json  Config.h.in  README.md
assets/shader/: basic.3.3.fs  basic.3.3.vs
hello/: CMakeLists.txt
hello/src/hello/: Hello.cpp
include/GLFW/: CMakeLists.txt
include/KHR/: CMakeLists.txt
include/etc/: CMakeLists.txt
include/glad/: CMakeLists.txt  glad.h
include/glm/: CMakeLists.txt
include/hello/: CMakeLists.txt
include/hello/src/hello/: Hello.h
include/stb/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  stb_imp.cpp
src/oglasset/: CMakeLists.txt
src/oglasset/include/oglasset/: Shader.h  Texture.h
src/oglasset/src/: Shader.cpp  Texture.cpp
src/oglbuffer/: CMakeLists.txt
src/oglbuffer/include/oglbuffer/: ObjectBuffer.h  VertexArray.h  VertexAttribute.h
src/oglbuffer/src/: ObjectBuffer.cpp  VertexArray.cpp  VertexAttribute.cpp
src/oglengine/: CMakeLists.txt
src/oglengine/include/oglengine/: Engine.h
src/oglengine/src/: Engine.cpp
